example/secondfile/objects/Certification__c.object
<CustomObject>
    <fields>
        <fullName>Certification_Number__c</fullName>
        <label>Certification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Type__c</fullName>
        <label>Certification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AICPA-CITP</fullName>
                </value>
                <value>
                    <fullName>Avaya-ACE</fullName>
                </value>
                <value>
                    <fullName>Avaya-ACS</fullName>
                </value>
                <value>
                    <fullName>Checkpoint CCSA NGX</fullName>
                </value>
                <value>
                    <fullName>Checkpoint CCSE NGX</fullName>
                </value>
                <value>
                    <fullName>Checkpoint CCSPA</fullName>
                </value>
                <value>
                    <fullName>Cisco CCDA</fullName>
                </value>
                <value>
                    <fullName>Cisco CCDP</fullName>
                </value>
                <value>
                    <fullName>Cisco CCIE</fullName>
                </value>
                <value>
                    <fullName>Cisco CCIP</fullName>
                </value>
                <value>
                    <fullName>Cisco CCNA</fullName>
                </value>
                <value>
                    <fullName>Cisco CCNP</fullName>
                </value>
                <value>
                    <fullName>Cisco CCSP</fullName>
                </value>
                <value>
                    <fullName>Cisco CCVP</fullName>
                </value>
                <value>
                    <fullName>Comp TIA Convergence +</fullName>
                </value>
                <value>
                    <fullName>CompTIA e-biz+</fullName>
                </value>
                <value>
                    <fullName>CompTIA inet +</fullName>
                </value>
                <value>
                    <fullName>CompTIA network +</fullName>
                </value>
                <value>
                    <fullName>CompTIA server+</fullName>
                </value>
                <value>
                    <fullName>Comptia Security+</fullName>
                </value>
                <value>
                    <fullName>CWNP CWNA</fullName>
                </value>
                <value>
                    <fullName>CWNA CWSP</fullName>
                </value>
                <value>
                    <fullName>CWNP CWNE</fullName>
                </value>
                <value>
                    <fullName>CWNP CWNI</fullName>
                </value>
                <value>
                    <fullName>EMC PPA</fullName>
                </value>
                <value>
                    <fullName>EMC PPE</fullName>
                </value>
                <value>
                    <fullName>EMC PPS</fullName>
                </value>
                <value>
                    <fullName>IBM –Business partner</fullName>
                </value>
                <value>
                    <fullName>ICP CISA</fullName>
                </value>
                <value>
                    <fullName>ICP CISM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Certifications</relationshipLabel>
        <relationshipName>Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Certified__c</fullName>
        <label>Date Certified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LSO_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>LSO ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Certifications</relationshipLabel>
        <relationshipName>Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Status__c</fullName>
        <label>Training Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Training expiration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_Passed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who Passed</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Certifications</relationshipLabel>
        <relationshipName>Certification_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Certification</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Certification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <recordTypes>
        <fullName>Industry</fullName>
        <active>true</active>
        <description>Certifications records entered on the Lead level</description>
        <label>Industry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Authorization</fullName>
        <active>true</active>
        <description>Certifications records entered on the Account level</description>
        <label>Product Authorization</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>